--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ function showPosition(position) {
 
     var myOptions = {
     // center:new google.maps.LatLng(-43.5119195,172.65374549999999), //center
-    center:new google.maps.LatLng(-43.5119195,172.65374549999999),
+    center:latlon,
     zoom:15, //zoom
     mapTypeId:google.maps.MapTypeId.ROADMAP, //maptype:ROADMAP
     mapTypeControl:false,
